--- a/tests/cassettes/test_carrier_account_update_amazon_shipping.yaml
+++ b/tests/cassettes/test_carrier_account_update_amazon_shipping.yaml
@@ -20,16 +20,16 @@ interactions:
     uri: https://api.easypost.com/v2/carrier_accounts/register_oauth
   response:
     body:
-      string: '{"id": "ca_102f186f791648b692501b0c6b8971a4", "object": "CarrierAccount",
-        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-10-21T21:55:03Z",
-        "updated_at": "2024-10-21T21:55:03Z", "description": null, "reference": null,
+      string: '{"id": "ca_e875ee2e98ac4c0c8d1d8f5b43aac959", "object": "CarrierAccount",
+        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-12-16T22:02:20Z",
+        "updated_at": "2024-12-16T22:02:20Z", "description": null, "reference": null,
         "billing_type": "carrier", "readable": "Amazon Shipping", "logo": null, "fields":
         [], "credentials": {}, "test_credentials": {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1432'
+      - '1420'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -49,20 +49,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 6c7e76b86716cdb7e7874d4300480c14
+      - ead55e6f6760a36ce786c93e005b6c1f
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb42nuq
+      - bigweb35nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb4nuq b6e1b5034c
+      - intlb4nuq 51d74985a2
       - extlb2nuq 99aac35317
       x-runtime:
-      - '0.080434'
+      - '0.081789'
       x-version-label:
-      - easypost-202410212124-540267707a-master
+      - easypost-202412120021-b747238cc5-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -82,19 +82,19 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_102f186f791648b692501b0c6b8971a4
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_e875ee2e98ac4c0c8d1d8f5b43aac959
   response:
     body:
-      string: '{"id": "ca_102f186f791648b692501b0c6b8971a4", "object": "CarrierAccount",
-        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-10-21T21:55:03Z",
-        "updated_at": "2024-10-21T21:55:03Z", "description": null, "reference": null,
+      string: '{"id": "ca_e875ee2e98ac4c0c8d1d8f5b43aac959", "object": "CarrierAccount",
+        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-12-16T22:02:20Z",
+        "updated_at": "2024-12-16T22:02:20Z", "description": null, "reference": null,
         "billing_type": "carrier", "readable": "Amazon Shipping", "logo": null, "fields":
         [], "credentials": {}, "test_credentials": {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1432'
+      - '1420'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -109,32 +109,35 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 6c7e76b86716cdbce7874d430048118f
+      - ead55e6f6760a36ce786c93e005b6c7c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb42nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb4nuq b6e1b5034c
+      - intlb4nuq 51d74985a2
       - extlb2nuq 99aac35317
       x-runtime:
-      - '0.033679'
+      - '0.038244'
       x-version-label:
-      - easypost-202410212124-540267707a-master
+      - easypost-202412120021-b747238cc5-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 200
       message: OK
 - request:
-    body: '{}'
+    body: '{"carrier_account_oauth_registrations": {"description": "test description",
+      "reference": "test reference"}}'
     headers:
       Accept:
       - '*/*'
@@ -143,7 +146,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '2'
+      - '107'
       Content-Type:
       - application/json
       authorization:
@@ -151,19 +154,19 @@ interactions:
       user-agent:
       - <REDACTED>
     method: PATCH
-    uri: https://api.easypost.com/v2/carrier_accounts/register_oauth/ca_102f186f791648b692501b0c6b8971a4
+    uri: https://api.easypost.com/v2/carrier_accounts/register_oauth/ca_e875ee2e98ac4c0c8d1d8f5b43aac959
   response:
     body:
-      string: '{"id": "ca_102f186f791648b692501b0c6b8971a4", "object": "CarrierAccount",
-        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-10-21T21:55:03Z",
-        "updated_at": "2024-10-21T21:55:08Z", "description": null, "reference": null,
+      string: '{"id": "ca_e875ee2e98ac4c0c8d1d8f5b43aac959", "object": "CarrierAccount",
+        "type": "AmazonShippingAccount", "clone": false, "created_at": "2024-12-16T22:02:20Z",
+        "updated_at": "2024-12-16T22:02:21Z", "description": null, "reference": null,
         "billing_type": "carrier", "readable": "Amazon Shipping", "logo": null, "fields":
         [], "credentials": {}, "test_credentials": {}}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1440'
+      - '1452'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -183,20 +186,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 6c7e76b86716cdbce7874d43004811bd
+      - ead55e6f6760a36de786c93e005b6cc6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb36nuq
+      - bigweb39nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb4nuq b6e1b5034c
+      - intlb4nuq 51d74985a2
       - extlb2nuq 99aac35317
       x-runtime:
-      - '0.066719'
+      - '0.062129'
       x-version-label:
-      - easypost-202410212124-540267707a-master
+      - easypost-202412120021-b747238cc5-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -218,7 +221,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_102f186f791648b692501b0c6b8971a4
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_e875ee2e98ac4c0c8d1d8f5b43aac959
   response:
     body:
       string: '{}'
@@ -246,20 +249,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 6c7e76b86716cdbde7874d4300481200
+      - ead55e6f6760a36de786c93e005b6d26
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb53nuq
+      - bigweb55nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb3nuq b6e1b5034c
+      - intlb4nuq 51d74985a2
       - extlb2nuq 99aac35317
       x-runtime:
-      - '0.063692'
+      - '0.103086'
       x-version-label:
-      - easypost-202410212124-540267707a-master
+      - easypost-202412120021-b747238cc5-master
       x-xss-protection:
       - 1; mode=block
     status:
