--- a/tests/cassettes/test_webhook_create.yaml
+++ b/tests/cassettes/test_webhook_create.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"webhook": {"url": "http://example.com", "params": {"webhook_secret":
-      "s\u00e9cret"}}}'
+    body: '{"webhook": {"url": "http://example.com", "webhook_secret": "s\u00e9cret",
+      "custom_headers": [{"name": "test", "value": "header"}]}}'
     headers:
       Accept:
       - '*/*'
@@ -10,7 +10,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '87'
+      - '132'
       Content-Type:
       - application/json
       authorization:
@@ -21,14 +21,14 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_4bb2d37aeaff11efab531f670556be6e", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2025-02-14T18:12:48Z",
-        "disabled_at": null}'
+      string: '{"id": "hook_5086302eeeef11ef883e4736f95f329e", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2025-02-19T18:28:29Z",
+        "disabled_at": null, "custom_headers": [{"name": "test", "value": "header"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '161'
+      - '213'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -48,20 +48,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - a17ffd3467af879fe78740000059c5dc
+      - 3c3ed33567b622cce2b8e5f1000336bc
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb58nuq
+      - bigweb40nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb3nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - extlb2nuq 99aac35317
       x-runtime:
-      - '0.148259'
+      - '0.367575'
       x-version-label:
-      - easypost-202502132348-e5a3dc472b-master
+      - easypost-202502191732-9cdc8ea15b-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -83,7 +83,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_4bb2d37aeaff11efab531f670556be6e
+    uri: https://api.easypost.com/v2/webhooks/hook_5086302eeeef11ef883e4736f95f329e
   response:
     body:
       string: '{}'
@@ -111,20 +111,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - a17ffd3267af87a0e78740180059c632
+      - 3c3ed33367b622cde2b8e5f200033741
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb33nuq
+      - bigweb59nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb4nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - intlb3nuq 51d74985a2
+      - extlb2nuq 99aac35317
       x-runtime:
-      - '0.284460'
+      - '0.286270'
       x-version-label:
-      - easypost-202502132348-e5a3dc472b-master
+      - easypost-202502191732-9cdc8ea15b-master
       x-xss-protection:
       - 1; mode=block
     status:
