--- a/tests/cassettes/test_webhook_update.yaml
+++ b/tests/cassettes/test_webhook_update.yaml
@@ -20,14 +20,14 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_4c3b5178eaff11ef8e003d5bcc679766", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2025-02-14T18:12:49Z",
-        "disabled_at": null}'
+      string: '{"id": "hook_72e4caf4eeef11efb30a1373530d9838", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2025-02-19T18:29:26Z",
+        "disabled_at": null, "custom_headers": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '161'
+      - '181'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -42,32 +42,35 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - a17ffd3967af87a0e78740190059c6d4
+      - 3c3ed32f67b62306e2b8e6d800036fff
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb41nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb3nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - extlb2nuq 99aac35317
       x-runtime:
-      - '0.115492'
+      - '0.121274'
       x-version-label:
-      - easypost-202502132348-e5a3dc472b-master
+      - easypost-202502191732-9cdc8ea15b-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"webhook": {"params": {"webhook_secret": "s\u00e9cret"}}}'
+    body: '{"webhook_secret": "s\u00e9cret", "custom_headers": [{"name": "test", "value":
+      "header"}]}'
     headers:
       Accept:
       - '*/*'
@@ -76,7 +79,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '58'
+      - '90'
       Content-Type:
       - application/json
       authorization:
@@ -84,17 +87,17 @@ interactions:
       user-agent:
       - <REDACTED>
     method: PATCH
-    uri: https://api.easypost.com/v2/webhooks/hook_4c3b5178eaff11ef8e003d5bcc679766
+    uri: https://api.easypost.com/v2/webhooks/hook_72e4caf4eeef11efb30a1373530d9838
   response:
     body:
-      string: '{"id": "hook_4c3b5178eaff11ef8e003d5bcc679766", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2025-02-14T18:12:49Z",
-        "disabled_at": null}'
+      string: '{"id": "hook_72e4caf4eeef11efb30a1373530d9838", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2025-02-19T18:29:26Z",
+        "disabled_at": null, "custom_headers": [{"name": "test", "value": "header"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '161'
+      - '213'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -114,20 +117,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - a17ffd3667af87a1e787401a0059c736
+      - 3c3ed32f67b62306e2b8e6d900037029
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb41nuq
+      - bigweb56nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb4nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - extlb2nuq 99aac35317
       x-runtime:
-      - '0.425372'
+      - '0.637407'
       x-version-label:
-      - easypost-202502132348-e5a3dc472b-master
+      - easypost-202502191732-9cdc8ea15b-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -149,7 +152,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_4c3b5178eaff11ef8e003d5bcc679766
+    uri: https://api.easypost.com/v2/webhooks/hook_72e4caf4eeef11efb30a1373530d9838
   response:
     body:
       string: '{}'
@@ -172,25 +175,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - a17ffd3867af87a1e787401b0059c7dc
+      - 3c3ed32e67b62307e2b8e9e9000370f3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb53nuq
+      - bigweb32nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb4nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - extlb2nuq 99aac35317
       x-runtime:
-      - '0.287960'
+      - '0.326322'
       x-version-label:
-      - easypost-202502132348-e5a3dc472b-master
+      - easypost-202502191732-9cdc8ea15b-master
       x-xss-protection:
       - 1; mode=block
     status:
